update README file

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-hellow dear, I need you
+hellow dear, I need you, I miss you and I Love you 
+and I hope we will meet soon according to the will of God.
